--- a/linkingProject/package.json
+++ b/linkingProject/package.json
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "linked-package": "link:../linked-package/",
     "react": "16.4.1",
     "react-native": "0.56.1"
   },
