--- a/linkingProject/package.json
+++ b/linkingProject/package.json
@@ -13,8 +13,8 @@
   },
   "devDependencies": {
     "babel-jest": "23.6.0",
-    "babel-preset-react-native": "^5",
     "jest": "23.6.0",
+    "metro-react-native-babel-preset": "0.47.1",
     "react-test-renderer": "16.4.1"
   },
   "jest": {
