Upgrade to 0.59.10 using rn-diff-purge manual diff

--- a/linkingProject/package.json
+++ b/linkingProject/package.json
@@ -8,14 +8,16 @@
   },
   "dependencies": {
     "linked-package": "link:../linked-package/",
-    "react": "16.5.0",
-    "react-native": "0.57.2"
+    "react": "16.8.3",
+    "react-native": "0.59.10"
   },
   "devDependencies": {
-    "babel-jest": "23.6.0",
-    "jest": "23.6.0",
-    "metro-react-native-babel-preset": "0.47.1",
-    "react-test-renderer": "16.4.1"
+    "@babel/core": "^7.4.5",
+    "@babel/runtime": "^7.4.5",
+    "babel-jest": "^24.8.0",
+    "jest": "^24.8.0",
+    "metro-react-native-babel-preset": "^0.54.1",
+    "react-test-renderer": "16.8.3"
   },
   "jest": {
     "preset": "react-native"
